--- a/Project-506/app/src/main/res/layout/activity_main.xml
+++ b/Project-506/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <FrameLayout
+        android:id="@+id/FrameLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomnav"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomnav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:background="#92BF5D"
-        app:menu="@menu/item_list"/>
+        android:background="#FFEB3B"
+        app:menu="@menu/item_list"
+        app:itemIconTint="@drawable/choice"
+        app:itemTextColor="@drawable/choice"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
