--- a/Project-506/app/src/main/res/drawable/choice.xml
+++ b/Project-506/app/src/main/res/drawable/choice.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color = "#B55A5A" android:state_checked="true"/>
-    <item android:color = "#5B97B3" android:state_checked="false"/>
+    <item android:color = "#F69D16" android:state_checked="true"/>
+    <item android:color = "#9C8C01" android:state_checked="false"/>
 </selector>
