--- a/Project-506/app/src/main/res/menu/item_list.xml
+++ b/Project-506/app/src/main/res/menu/item_list.xml
@@ -1,17 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/menu_home"
         android:title="홈"
         android:icon="@drawable/ic_baseline_home_24"/>
     <item
+        android:id="@+id/menu_toilet"
         android:title="화장실"
-        android:icon="@drawable/ic_baseline_home_24"/>
+        android:icon="@drawable/ic_baseline_bathroom_24"/>
     <item
+        android:id="@+id/menu_bed"
         android:title="잠"
-        android:icon="@drawable/ic_baseline_home_24"/>
+        android:icon="@drawable/ic_baseline_bed_24"/>
     <item
+        android:id="@+id/menu_post"
         android:title="생존신고"
-        android:icon="@drawable/ic_baseline_home_24"/>
+        android:icon="@drawable/ic_baseline_brightness_6_24"/>
 
 
 </menu>
